fix: align custom font sizes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -198,3 +198,7 @@ pre[class*='language-'] {
         @apply flex flex-wrap gap-x-4;
     }
 }
+
+.debug-box {
+    border: 4px solid red;
+}
